<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TodoMind</string>
    <string name="task">Task</string>
    <string name="mind_map">Mind Map</string>
    <string name="record">Record</string>
    <string name="settings">Settings</string>
    <string name="top">Top</string>
    <string name="detail">Detail</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading…</string>
    <string name="question_confirm_delete">Are you sure you want to delete this mind map?</string>
    <string name="notify_tasks_delete">Tasks in this mind map will also be deleted.</string>
    <string name="background">background</string>
    <string name="sample_date">Fri 10/20 22:15</string>
    <string name="sample_title">Sample Title Sample Title Sample Title</string>
    <string name="sample_description" tools:ignore="Typos">description description description description description description</string>
    <string name="zoom">Zoom</string>
    <string name="zoom_out">Zoom out</string>
    <string name="percent">%</string>
    <string name="oss_licenses">OSS licenses</string>
    <string name="back">back</string>
    <string name="info">information</string>

    <!-- task screen -->
    <string name="task_in_progress">In Progress</string>
    <string name="task_open">Open</string>
    <string name="task_complete">Complete</string>
    <string name="task_new_task">New task</string>

    <!-- task detail screen -->
    <string name="task_detail_editing_title">Task Detail</string>
    <string name="task_detail_creating_title">New Task</string>
    <string name="task_detail_parent_select_title">Select Parent Node</string>

    <!-- mind map detail screen -->
    <string name="mind_map_detail_editing_title">Mind Map Detail</string>
    <string name="mind_map_detail_creating_title">New Mind Map</string>

    <!-- content descriptions -->
    <string name="desc_app_icon">TodoMind app icon</string>
    <string name="desc_add">Add</string>
</resources>