<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:elevation="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/map_card_background"
            android:background="@color/aqua"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_animated_shape"
            android:contentDescription="@string/background" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/map_card_created_date"
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/sample_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/map_card_title"
                style="@style/Headline1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/white"
                android:text="@string/sample_title"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="5dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/map_card_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:text="@tools:sample/lorem/random"
                android:ellipsize="end"
                android:maxLines="3"
                app:layout_constraintTop_toBottomOf="@+id/map_card_title" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:paddingTop="6dp"
                android:textAlignment="center"
                android:text="@string/detail"
                style="@style/CaptionSB"
                android:textColor="@color/deep_purple"
                android:background="@drawable/bg_top_right_bottom_right_rounded_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
